--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,27 @@ h1, h2, h3, h4, h5, h6 {
    color: #325e3d;
 }
 
+h1 {
+   font-size: 2.25rem;
+}
+
+h2 {
+   font-size: 1.75rem;
+}
+
+h3 {
+   font-size: 1.5rem;
+}
+
+h4 {
+   font-size: 1.25rem;
+}
+
+h5, h6 {
+   font-size: 1.15rem;
+}
+
+
 hr {
 	margin: 30px 0;
 	color: #325e3d;
